# MicroLight-Console

./: .gitignore  package-lock.json  package.json  tsconfig.base.json
apps/desktop/: electron.vite.config.ts  package.json  tsconfig.json
apps/desktop/scripts/: package-win.mjs  prepare-package.mjs
apps/desktop/src/main/: index.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: App.vue  env.d.ts  locales.ts  main.ts  styles.css
apps/server/: package.json  tsconfig.json
apps/server/src/: index.ts  persistence.ts  port-diagnostics.ts  preflight.ts  project-scanner.ts  release-readiness.ts  runtime-tools.ts  service-group-runtime.ts  service-runtime.ts  trial-validation.ts
apps/server/src/types/: better-sqlite3.d.ts  pidusage.d.ts
docs/: MicroLight-Console-Project-Plan.md
fixtures/sample-maven-app/: pom.xml
fixtures/sample-multi-module-app/: pom.xml
fixtures/sample-multi-module-app/platform/: pom.xml
fixtures/sample-multi-module-app/platform/common-lib/: pom.xml
fixtures/sample-multi-module-app/platform/service-app/: pom.xml
lite-runtime/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
lite-runtime/src/: App.vue  style.css  types.ts
lite-runtime/src-tauri/: Cargo.toml  tauri.conf.json
lite-runtime/src-tauri/src/: lib.rs  main.rs  models.rs  project.rs  runtime.rs
lite-runtime/src/components/: LogConsole.vue  ServiceControls.vue  ServiceList.vue
lite-runtime/src/lib/: tauri.ts
scripts/: verify-mvp.mjs
(+3 files in other folders)
